# Monitor-Manager

./: .gitignore  README.md
.github/workflows/: python-build.yml  rust-build.yml
monitor-manager/: build_exe.bat  create_icon.py  main.py  monitor_manager.py  requirements.txt
monitor-manager-rust/: .gitignore  Cargo.toml  app.manifest  build.bat  icon.rc  monitor-manager.manifest
monitor-manager-rust/src/: main.rs  monitor.rs  tray_app.rs
